update forum and question functions
