# routes/indexRoutes.js
@@ -8,18 +8,16 @@ const fileRoutes = require("./api/fileRoutes");
 const forumRoutes = require("./socket/forumRoutes");
 const questionRoutes = require("./socket/questionRoutes")
 
+
 router.use("/auth", authRoutes);
+router.use("/matieres", matiereRoutes);
+/*
+router.use("/chapitres", chapitreRoutes);
+router.use("/search", searchRoutes);
+router.use("/file", fileRoutes);
+*/
 router.use("/forum", forumRoutes);
 router.use("/question",questionRoutes)
-
-
-/*
-router.use("/matieres", matiereRoutes);
-router.use("/chapitres", chapitreRoutes);
-router.use("/file", fileRoutes);
-router.use("/search", searchRoutes);
-*/
-
 
 
 module.exports = (io) => {
