# services/api/searchService.js
@@ -1,31 +1,22 @@
 const { HttpError } = require('../../utils/exceptions');
-const Matiere = require("../../models/api/MatiereModel")
-const Chapitre = require("../../models/api/ChapitreModel")
+const MatiereService = require('./matiereService');
+const ChapitreService = require('./chapitreService')
 
 
 
 class SearchService {
     
-    static async search(query) {
-        try {
-          // Recherche dans les matières
-          const matieres = await Matiere.find({
-            intitule: { $regex: query, $options: 'i' }, 
-            isDelete: false
-          });
-    
-          // Recherche dans les chapitres
-          const chapitres = await Chapitre.find({
-            intitule: { $regex: query, $options: 'i' },
-            isDelete: false
-          });
-    
-          return { matieres, chapitres };
-        } catch (error) {
-          console.error(error);
-          throw new HttpError(error, 500, 'Erreur interne du serveur');
-        }
+  static async search(intitule) {
+    try {
+      const matieres = await MatiereService.searchMatiereByIntitule(intitule);
+      const chapitres = await ChapitreService.searchChapitre(intitule);
+
+      return [...matieres, ...chapitres];
+    } catch (error) {
+      console.error(`Erreur lors de la recherche : ${error.message}`);
+      throw error;
     }
+  }
 }
 
 module.exports = SearchService;
